SUBDIRS = tools

animate_parcels_PYTHON = animate-parcels.py
animate_parcelsdir = $(bindir)

plot_parcels_PYTHON = plot-parcels.py
plot_parcelsdir = $(bindir)

plot_diagnostics_PYTHON = plot-diagnostics.py
plot_diagnosticsdir = $(bindir)

plot_timings_PYTHON = plot-timings.py
plot_timingsdir = $(bindir)

merge_ellipses_PYTHON = merge-ellipses.py
merge_ellipsesdir = $(bindir)

plot_mergers_PYTHON = plot-mergers.py
plot_mergersdir = $(bindir)
