if ENABLE_PYTHON
SUBDIRS = tools

animate_parcels_PYTHON = animate-parcels.py
animate_parcelsdir = $(bindir)

plot_parcels_PYTHON = plot-parcels.py
plot_parcelsdir = $(bindir)

plot_diagnostics_PYTHON = plot-diagnostics.py
plot_diagnosticsdir = $(bindir)

plot_timings_PYTHON = plot-timings.py
plot_timingsdir = $(bindir)

merge_ellipses_PYTHON = merge-ellipses.py
merge_ellipsesdir = $(bindir)

subgrid_2d_generalised_PYTHON = subgrid_2d_generalised.py
subgrid_2d_generaliseddir = $(bindir)

compare_results_PYTHON = compare_results.py
compare_resultsdir = $(bindir)

plot_slices_PYTHON = plot_slices.py
plot_slicesdir = $(bindir)
endif
