bin_PROGRAMS = epic
epic_SOURCES = 					\
	utils/constants.f90 			\
	utils/stafft.f90			\
	utils/deriv1d.f90			\
	utils/options.f90			\
	utils/parameters.f90 			\
	taylorgreen.f90				\
	utils/writer.f90			\
	fields/fields.f90			\
	parcels/ellipse.f90			\
	parcels/parcel_container.f90 		\
	parcels/parcel_bc.f90			\
	parcels/parcel_nearest.f90		\
	parcels/parcel_merge.f90		\
	parcels/parcel_split.f90		\
	parcels/parcel_interpl.f90 		\
	parcels/parcel_diverge.f90		\
	parser/parser.f90 			\
	utils/diagnostics.f90			\
	stepper/rk4_utils.f90			\
	stepper/classic_rk4.f90			\
	stepper/ls_rk4.f90			\
	stepper/rk4.f90 			\
	utils/init.f90 				\
	tri_inversion.f90			\
	model.f90 				\
	epic.f90
