bin_PROGRAMS = epic
epic_SOURCES = 					\
	utils/constants.f90 			\
	utils/stafft.f90			\
	utils/deriv1d.f90			\
	utils/options.f90			\
	utils/parameters.f90 			\
	utils/writer.f90			\
	fields/fields.f90			\
	parcels/ellipse.f90			\
	parcels/parcel_container.f90 		\
	parcels/parcel_bc.f90			\
	parcels/parcel_nearest.f90		\
	parcels/parcel_merge.f90		\
	parcels/parcel_split.f90		\
	parcels/parcel_init.f90			\
	models/taylorgreen.f90			\
	models/straka.f90			\
	models/models.f90			\
	parcels/parcel_interpl.f90 		\
	parcels/parcel_correction.f90		\
	utils/parser.f90 			\
	utils/diagnostics.f90			\
	tri_inversion.f90			\
	stepper/rk4_utils.f90			\
	stepper/classic_rk4.f90			\
	stepper/ls_rk4.f90			\
	stepper/rk4.f90 			\
	epic.f90

clean-local:
	rm -f *.mod
