SUBDIRS = animate

toolsdir = $(bindir)/tools

# 23 March 2021
# https://stackoverflow.com/questions/10721826/install-arbitrary-data-files-in-fixed-location-with-automake
nobase_tools_DATA = 			\
	colors.py			\
	nc_reader.py 			\
	nc_fields.py			\
	plots.py			\
	bokeh_style.py			\
	bokeh_plots.py			\
	mpl_beautify.py 		\
	mpl_style.py			\
	units.py			\
	__init__.py
